[project]
name = "nsi-orchestrator"
version = "0.1.0"
description = "NSI WFO implentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orchestrator-core>=4.8.2",
    "pydantic-settings>=2.13.1",
    "python-statemachine>=3.0.0",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py313"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
